# jarvis

./: .env.example  .gitignore  README.md  dbus_power.txt  pyproject.toml
extensions/jarvis-overlay@stark.industries/: extension.js  metadata.json  prefs.js  stylesheet.css
extensions/jarvis-overlay@stark.industries/schemas/: gschemas.compiled  org.gnome.shell.extensions.jarvis-overlay.gschema.xml
jarvis/: __init__.py  daemon.py  onboarding.py
jarvis/brain/: __init__.py  agent.py  conversation.py  prompts.py
jarvis/config/: __init__.py  settings.py
jarvis/dbus_service/: __init__.py  server.py
jarvis/memory/: __init__.py  patterns.py  preferences.py  store.py
jarvis/tools/: __init__.py  apps.py  browser.py  clipboard.py  files.py  media.py  notifications.py  osint.py  realtime.py  registry.py  scraper.py  shell.py  system.py
jarvis/utils/: resilience.py
jarvis/voice/: __init__.py
scripts/: browser_launcher.sh  install-extension.sh  install.sh  override_shortcut.py  uninstall.sh  update.sh
